test(http): add `ready`, `unready` and `upload_player_attr` for http service
